<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
            android:textSize="45sp"
            android:textStyle="bold"
            android:textColor="#00897B"
            android:gravity="center">

        </TextView>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/trekking">

        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:layout_weight=".5"
        android:gravity="center">

        <Button
            android:id="@+id/L_act"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/l_button"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:background="#00897B"
            android:layout_marginBottom="15dp"
            android:textColor="#fff">
        </Button>

        <Button
            android:id="@+id/R_act"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r_button"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:background="#00897B"
            android:textColor="#fff">
        </Button>

    </LinearLayout>

</LinearLayout>